# ngaji

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
Formula/: ceramah.rb  ngaji.rb
src/ceramah/: cli.py  db.py  state.py  youtube.py
src/ngaji/: cli.py  db.py  player.py  state.py
