[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ceramah"
version = "0.1.0"
description = "YouTube audio player untuk terminal — dengarkan ceramah tanpa buka browser"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "rezaafaisal", email = "rezaafaisal@users.noreply.github.com" }
]
keywords = ["youtube", "audio", "cli", "terminal", "podcast", "ceramah"]
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
  "yt-dlp>=2024.1.0",
  "rich>=13.0.0",
]

[project.scripts]
ceramah = "ceramah.cli:main"

[project.urls]
Homepage = "https://github.com/rezaafaisal/ceramah"
Repository = "https://github.com/rezaafaisal/ceramah"
Issues = "https://github.com/rezaafaisal/ceramah/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ceramah"]